# riscv-vm

./: .travis.yml  CMakeLists.txt  LICENSE.md  NEWS.md  README.md  appveyor.yml
riscv_core/: codegen.c  codegen.cpp  decode.c  decode.cpp  decode.h  emulate.cpp  ir.c  ir.h  riscv.c  riscv.h  riscv_common.c  riscv_common.cpp  riscv_conf.h  riscv_jit.c  riscv_jit.cpp  riscv_jit.h  riscv_private.h
riscv_driver/: file.h  main.cpp
riscv_driver/elf/: elf32.h  elf_common.h
riscv_emu/: riscv.c  riscv.h  riscv_common.c  riscv_private.h
riscv_jit_1/: riscv_jit_1.c
riscv_jit_2/: ir.c  ir.h  riscv_jit_2.c  riscv_jit_2.h
riscv_nojit/: riscv_nojit.c
riscv_vm/: args.cpp  elf.cpp  elf.h  file.h  main.cpp  memory.cpp  memory.h  state.h  syscall.cpp  syscall_doom.cpp  syscall_sdl.cpp
tests/: compliance.py  runtests.py
tests/compliance/dis/: DIV.txt  DIVU.txt  I-ADD-01.txt  I-ADDI-01.txt  I-AND-01.txt  I-ANDI-01.txt  I-AUIPC-01.txt  I-BEQ-01.txt  I-BGE-01.txt  I-BGEU-01.txt  I-BLT-01.txt  I-BLTU-01.txt  I-BNE-01.txt  I-DELAY_SLOTS-01.txt  I-EBREAK-01.txt  I-ECALL-01.txt  I-ENDIANESS-01.txt  I-IO-01.txt  I-JAL-01.txt  I-JALR-01.txt  I-LB-01.txt  I-LBU-01.txt  I-LH-01.txt  I-LHU-01.txt  I-LUI-01.txt  I-LW-01.txt  I-MISALIGN_JMP-01.txt  I-MISALIGN_LDST-01.txt  I-NOP-01.txt  I-OR-01.txt  I-ORI-01.txt  I-RF_size-01.txt  I-RF_width-01.txt  I-RF_x0-01.txt  I-SB-01.txt  I-SH-01.txt  I-SLL-01.txt  I-SLLI-01.txt  I-SLT-01.txt  I-SLTI-01.txt  (+16 more)
tests/compliance/elf/: DIV.elf  DIVU.elf  I-ADD-01.elf  I-ADDI-01.elf  I-AND-01.elf  I-ANDI-01.elf  I-AUIPC-01.elf  I-BEQ-01.elf  I-BGE-01.elf  I-BGEU-01.elf  I-BLT-01.elf  I-BLTU-01.elf  I-BNE-01.elf  I-DELAY_SLOTS-01.elf  I-EBREAK-01.elf  I-ECALL-01.elf  I-ENDIANESS-01.elf  I-IO-01.elf  I-JAL-01.elf  I-JALR-01.elf  I-LB-01.elf  I-LBU-01.elf  I-LH-01.elf  I-LHU-01.elf  I-LUI-01.elf  I-LW-01.elf  I-MISALIGN_JMP-01.elf  I-MISALIGN_LDST-01.elf  I-NOP-01.elf  I-OR-01.elf  I-ORI-01.elf  I-RF_size-01.elf  I-RF_width-01.elf  I-RF_x0-01.elf  I-SB-01.elf  I-SH-01.elf  I-SLL-01.elf  I-SLLI-01.elf  I-SLT-01.elf  I-SLTI-01.elf  (+16 more)
tests/compliance/includes/: p_riscv_test.h  riscv_test.h
tests/coremark/: coremark.elf
tests/dhrystone/: dhrystone.elf  dhrystone.h  dhrystone_main.c
tests/doom/: README.md  doom.elf
tests/helloworld/: helloworld  main.c
tests/linpack/: linpack.c  linpack.elf
tests/mandelbrot/: mandelbrot.elf
tests/multiply/: multiply.c  multiply.elf
tests/pi/: pi.c  pi.elf
tests/puzzle/: puzzle.c  puzzle.elf
tests/quake/: quake_320.elf  quake_640.elf
tests/rsort/: rsort.c  rsort.elf
tests/smallpt/: smallpt.c  smallpt.cpp  smallpt.elf
tests/towers/: towers.c  towers.elf
tests/whetstone/: bench.h  whetstone.c  whetstone.elf
tinycg/: tinycg.c  tinycg.h
